assets/css/main.css
div.clear{ 
  clear:both;
  height:1px;
}

#header{ 
  height:66px;
  background:#2b77ab url('/assets/img/nav_pattern.jpg') repeat;
  color:#eeeeee;
  font-size:24px;
  padding:4px 10px 3px;
  box-shadow: 0px 3px 8px 1px #333;
  z-index:100;
  position:absolute;
  left:0px;
  right:0px;
  top:0px;
  z-index:101;
}

#header ul.links{ 
  float:right;
  margin: 12px 20px 0px 0px;
  padding:0px;
}

#header ul.links li{
  float:left;
  padding:10px;
  color:#fff;
  font-size:14px;
  list-style:none;
}

#header a {
  color: white;
  text-decoration: none;
}

#header a:hover {
  text-decoration: underline;
}

#header #searchBox{ 
  float:right;
  margin-top: 4px;
}

#header #searchBox input{
  font-size: 14px;
  height: 20px;
  width: 260px;
  margin-top: 11px;
  padding-left: 5px;
  -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: inset 0 2px 3px rgba(0,0,0,0.5);
  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.5);
}

#header #searchBox .btn{
  float:right;
}

#subnav{ 
  position:absolute;
  top:63px;
  left:-101px;
  bottom:0px;
  width:100px;
  z-index:100;
  overflow:hidden;
  -webkit-transition: all 0.5s ease-in-out;
}

#subnav.active{ 
  left:0px;
  -webkit-transition: all 0.5s ease-in-out;
}

#sidebar{
  background:#fff;
  position:absolute;
  top:63px;
  left:-325px;
  bottom:0px;
  width:315px;
  border-right:solid 2px #d2d2d2;
  z-index:100;
  -webkit-transition: all 0.5s ease-in-out;
}

#sidebar.active{ 
  left:0px;
  -webkit-transition: all 0.5s ease-in-out;
}

.btn{ 
  font-size:14px;
  background:#fb6900;
  color:#fff;
  padding:3px 5px;
  margin:12px 5px 5px 5px;
  border-radius:3px;
  cursor: pointer;
}

.btn:hover {
  background: #FB3F00;
}

ul.nav{ 
  margin:0px;
  padding:0px 0px 0px 10px;
}

ul.nav li { 
  float:left;
  list-style:none;
  height:40px;
  text-align:center;
  padding:0px 4px 22px;
  background:#fff;
  font-size:12px;
}

#sidebar #about{ 
  font-size:14px;
  margin:35px 35px 10px 15px;
}

#sidebar h2{ 
  border-bottom:solid 2px #e2e2e2;
  font-size:14px;
  line-height:20px;
  text-transform:uppercase;
  font-weight:bold;
  padding:4px 10px;
  background:url(/assets/img/sidebar_header_background.png);
  height:19px;
  color:#21496b;
}

#sidebar h3{ 
  margin:25px 10px 5px;
  font-size:18px
  line-height:20px;
  font-weight:normal;
}

#filters ul{ 
  margin:0px 5px;
  padding:0px;
}

#filters  ul.location li{
  float:left;
  list-style:none;
  padding:3px 5px;
  background:#fb6900;
  color:#fff;
  font-size:12px;
  border-radius:3px;
  margin:5px 5px;
  font-weight:bold;
} 

#filters ul li.addLocation{
  background:#8a8686;
  color:#fff;
}

#filters ul li .close{
  color:#000;
  font-size:0.8em;
  font-weight:bold;
}

#filters .clearFilters{ 
  float:right;
  position:relative;
  top:-33px;
  left:-10px;
  font-size:12px;
  color:#fb6900;
}

#filters .controls{ 
  margin:5px 10px;
}

#filters label{ 
  font-size:12px;
  font-weight:bold;
  margin-right:15px;
}

#filters .controls .row{
  margin:10px 0px 5px;
} 

.dateSelector{ 
  width:250px;
  height:15px;
  background:#ccc;
  border-radius:5px;
  margin:auto;
}

#results .serviceRequests{ 
  background:#d7d6d6;
  color:#000;
  position:absolute;
  bottom:0px;
  left:0px;
  right:0px;
  height:300px;
}

#results .serviceRequests .sort{
  padding:10px;
  max-height:40px;
} 

#results .serviceRequests ul{
  margin:0px;
  padding:0px;
  height:220px;
  overflow:auto;
} 

#results .serviceRequests ul li{
  padding:10px 5px;
  height:55px;
  background:#f2f2f2;
  border-top:solid 1px #fff;
}

#results .serviceRequests ul li img{
  float:right;
  width:75px;
  height:75px;
  margin-top:-10px;
  margin-right:-5px;
}

#results .serviceRequests .paging{ 
  padding:10px;
  max-height:40px;
}

#results .serviceRequests .paging .prev{
  float:left;
}

#results .serviceRequests .paging .next{
  float:right;
}

#results .serviceRequests .paging .pagecount{ 
  margin:auto;
  width:85px;
}

#sidebar img.toomany{ 
  margin:17px;
}

#sidebar div.nubbin{ 
  background:url(/assets/img/nubbin.png);
  position:absolute;
  top:30px;
  right:-1px;
  width:33px;
  height:34px;
}

#sidebar div.nubbin:hover{
  background-position:0px 34px;
  cursor: pointer;
}

#content{ 
  position:absolute;
  right:0px;
  bottom:0px;
  top:74px;
  left:0px;  
  overflow:auto;
  -webkit-transition: left 0.5s ease-in-out;
  -webkit-transition-delay: 0.1s;
}

#content.sidebar{
  left:215px;
  -webkit-transition: all 0.5s ease-in-out;
  -webkit-transition-delay: 0.3s;
}

#map{ 
  position:absolute;
  right:0px;
  bottom:0px;
  top:0px;
  left:0px;
}

#barnav ul.nav{ 
  padding:0px;
}

#barnav ul.nav li{ 
  float:inherit;
  border-right: solid 2px orange;
  padding:30px 0px 5px;
  height:40px;
}

#barnav ul li.selected
{
  background:url(/assets/img/notch.png) -8px 22px;
  border:none;
}

#barnav ul li.last{ 
  width:98px;
  height:3000px;
}

ul.nav li div{
  height:42px;
  width:50px;
  margin:auto;
  background:url(/assets/img/views_icons.png);
  cursor:pointer;
}

ul.nav li.filters div,
ul.nav li.map div,
ul.nav li.list div,
ul.nav li.graphs div,
ul.nav li.compare div,
ul.nav li.browse div {
  -webkit-transition: margin 0.1s ease-out;
  -moz-transition: margin 0.1s ease-out;
  -o-transition: margin 0.1s ease-out;
  transition: margin 0.1s ease-out;
}

ul.nav li.filters div{ background-position:50px 0px; }
ul.nav li.map div{ background-position:0px 0px; }
ul.nav li.list div{ background-position:250px 0px; }
ul.nav li.graphs div{ background-position:200px 0px; }
ul.nav li.compare div{ background-position:150px 0px; }
ul.nav li.browse div{ background-position:100px 0px; }

ul.nav li.filters.selected div, ul.nav li.filters:hover div { background-position:50px 43px; }
ul.nav li.map.selected div, ul.nav li.map:hover div { background-position:0px 43px; }
ul.nav li.list.selected div, ul.nav li.list:hover div { background-position:250px 43px; }
ul.nav li.graphs.selected div, ul.nav li.graphs:hover div { background-position:200px 43px; }
ul.nav li.compare.selected div, ul.nav li.compare:hover div { background-position:150px 43px; }
ul.nav li.browse.selected div, ul.nav li.browse:hover div { background-position:100px 43px; }

ul.nav li:hover div { margin-top:-4px; margin-bottom: 4px; }

div#content div#list{ 
  position:absolute;
  top:0px;
  left:0px;
  right:0px;
  bottom:0px;
}

div#content div#list table{ 
  border:solid 1px #d8d8d8;
  border-right:none;
  border-bottom:none;
  width:100%;
}

div#content div#list table th{
  border-bottom:solid 2px #000;
  border-right:solid 1px #d8d8d8;
  height:30px;
  text-align:left;
  padding:5px;
}

div#content div#list table td{
  border-right:solid 1px #d8d8d8;
  border-bottom:solid 1px #d8d8d8;;
  min-width:120px;
  max-width:250px;
  overflow:auto;
}

div#content div#list table tr:nth-child(even){ background-color:#eee; }
div#content div#list table tr:nth-child(odd) { background-color:#fff; }
div#content div#list{ 
  margin:20px 20px 20px 120px;
}

td.media{ 
  width:120px;
}

img.media{ 
  max-width:120px;

}

/******** Adjust leafet controls ***********/
.leaflet-top { 
  top:0px;
}
.leaflet-left {
  left:110px;
}
div.leaflet-control-center{
  height:46px;
  width:46px;
}
a.leaflet-control-center{
  height:46px;
  width:46px;
  display:block;
  position:relative;
  left:-9px;
  top:5px;
  background-image: url(/assets/img/center.png);
  background-position: 0px 0px;
}

#compare,#browse,#graphs{ 
  margin-left:120px;
}







img.siren
{
  width:130px;
  height:100px;
  background:url(/assets/img/compare_icons_x2.jpg) 0 0;
}
img.ticket
{
  width:170px;
  height:100px;
  background:url(/assets/img/compare_icons_x2.jpg) -145px 0;
}
img.clock
{
  width:120px;
  height:100px;
  background:url(/assets/img/compare_icons_x2.jpg) -295px 0;
}
img.cal
{
  width:120px;
  height:100px;
  background:url(/assets/img/compare_icons_x2.jpg) -440px 0;
}
.big-blue-text {  
  font-size: 50px;
  font-weight:900;
  color: #5093cc;
}
.big-red-text {  
  font-size: 50px;
  font-weight:900;
  color: #af3215;
}
.big-stat {
  margin-top: 50px;
  font-size: 50px;
  font-weight:900;
}
.big-stat-text {
  margin-top: 50px;
  font-size: 30px;
  font-weight:900;
}
.stat-desc {
  margin-left: -20px;
  width: 190px;
  font-weight:900;
  text-align: center;
}
.service-requests-title {
  font-size: 15px;
  font-weight:900;
  margin-left: 150px;
}
#underline-requests-title {
  height: 3px;
  background-color: gray;
  width: 480px;
  margin-left: -10px;
  margin-bottom: 20px;
}
#underline-stat-group {
  height: 1px;
  background-color: gray;
  width: 680px;
  margin-left: -100px;
  margin-top: 10px;
  margin-bottom: 20px;
}
.compare {
  padding-left: 20px;
}
.compare-counts {
  margin-left: 60px;
}
.compare.area-picker {
  padding-top: 20px;
  padding-bottom: 20px;
  margin-bottom: 15px;
  background:url(/assets/img/sidebar_header_background.png);
}
.area-name {
  margin-left: 15px;
  font-size: 50px;
}
#underline-opened-closed {
  border: 1px solid;
  border-color: gray;
  background-color: gray;
  width: 110px;
  margin-right:28px;
}
.bump-down {
  height: 80px;
  margin-top: 20px;
}
.sr-graph {
  margin-bottom: 10px;
}
.sr-top {
  font-size: 25px;
  font-weight:900;
  float: left;
}
.sr-top-1-left { 
  float: left;
  margin-right: 20px;
  height: 18px;
  width: 250px;
  background-color: #3496C9;
  color: white;
  font-size: 12px;
  font-weight: 900;
  text-align: right;
  padding-right: 2px;
}
.sr-top-1-right {
  float: right;
  height: 18px;
  width: 250px;
  background-color: #3496C9;
  margin-right: 220px;
  color: white;
  font-size: 12px;
  font-weight: 900;  
  padding-left: 2px;
}
.sr-top-2-left { 
  float: left;
  margin-left: 30px;
  margin-right: 20px;
  height: 18px;
  width: 220px;
  background-color: #63ABD3;
  color: white;
  font-size: 12px;
  font-weight: 900;
  text-align: right;
  padding-right: 2px;  
}
.sr-top-2-right {
  float: right;
  height: 18px;
  width: 220px;
  background-color: #63ABD3;
  color: white;
  margin-right: 250px;
  font-size: 12px;
  font-weight: 900;  
  padding-left: 2px;  
}
.sr-top-3-left { 
  float: left;
  margin-left: 50px;
  margin-right: 20px;
  height: 18px;
  width: 200px;
  background-color: #8CC0DE;
  color: white;
  font-size: 12px;
  font-weight: 900;
  text-align: right;
  padding-right: 2px;  
}
.sr-top-3-right {
  float: right;
  height: 18px;
  width: 200px;
  background-color: #8CC0DE;
  color: white;
  margin-right: 270px;
  font-size: 12px;
  font-weight: 900;  
  padding-left: 2px;  
}
.sr-top-4-left { 
  float: left;
  margin-left: 100px;
  margin-right: 20px;
  height: 18px;
  width: 150px;
  background-color: #B2D5E9;
  color: white;
  font-size: 12px;
  font-weight: 900;
  text-align: right;
  padding-right: 2px;  
}
.sr-top-4-right {
  float: right;
  height: 18px;
  width: 150px;
  background-color: #8CC0DE;
  color: white;
  margin-right: 320px;
  font-size: 12px;
  font-weight: 900;  
  padding-left: 2px;  
}
.sr-top-5-left { 
  float: left;
  margin-left: 180px;
  margin-right: 20px;
  height: 18px;
  width: 70px;
  background-color: #C5DFEE;
  color: white;
  font-size: 12px;
  font-weight: 900;
  text-align: right;
  padding-right: 2px;  
}
.sr-top-5-right {
  float: right;
  height: 18px;
  width: 70px;
  background-color: #C5DFEE;
  color: white;
  margin-right: 400px;
  font-size: 12px;
  font-weight: 900;  
  padding-left: 2px;  
}
.sr-label-left {
  float: left;
  width: 250px;
  text-align: right;
  font-size: 12px;
  font-weight: 900;
}
.sr-label-right {
  float: right;
  width: 250px;
  text-align: left;
  margin-right: 220px;
  font-size: 12px;
  font-weight: 900;
}
.sr-percent-1-left {
  font-size: 10px;
  font-weight: 900;
  float: left;
}
.sr-percent-1-right {
  font-size: 10px;
  font-weight: 900;
  float: right;
}

